--- a/style.css
+++ b/style.css
@@ -1,26 +1,51 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Serif&display=swap');
+
+:root {
+    --primary-color: red;
+    --secondary-color: coral;
+    --light-color: grey;
+    --dark-color: rgb(227, 222, 222);
+    --max-width: 1200px;
+}
 
 * {
-    box-sizing: border-box;
     margin: 0;
     padding: 0;
-
+    box-sizing: border-box;
 }
 
-.navbarbutton {
-    font-family: "Montserrat", sans-serif;
-    font-weight:500;
-    font-size: 16px;
+body {
+    font-family: montserrat, monospace;
+}
+
+nav{
+    background: grey;
+    height: 80px;
+    width: 100%;
+}
+label.logo {
     color: white;
-    text-decoration: none;
+    font-size: 35px;
+    line-height: 80px;
+    padding: 0 100px;
+    font-weight: bold;
 }
 
-header{
-    display: flex;
-    justify-content: space-between;
-    align-items:center;
-    padding: 30px 10%;
+nav ul {
+    float: right;
+    margin-right: 20px;
 }
-html {
-    scroll-behavior: smooth;
+nav ul li {
+    display: inline-block;
+    line-height:80px;
+    margin: 0 5px;
+}
+nav ul li a {
+    color: white;
+    font-size: 17px;
+}
+
+a.active,a:hover{
+    background: #1b9bff;
+    transition: .5s;
 }
